--- a/service/geodesy.html
+++ b/service/geodesy.html
@@ -67,10 +67,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                <span class="d-sm-none d-inline">КАГП</span>
-                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
+            <a href="/" class="logo d-flex align-items-center">
+                <h1 class="sitename">Филиал ППК "Роскадастр"<br />"Красноярское АГП"</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -123,20 +121,64 @@
         <section id="portfolio-details" class="portfolio-details section">
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
-                <ul>
-                    <li>
-                        Предприятием выполняются все виды инженерно-геодезических изысканий для проектирования, строительства и реконструкции;
-                    </li>
-                    <li>
-                        Развитие опорных и съемочных геодезических сетей;
-                    </li>
-                    <li>Топографическая съемка в масштабах 1:10000 – 1:200, включая съемку надземных и подземных сооружений в графической и цифровой формах;</li>
-                    <li>Камеральное и полевое трассирование линейных сооружений,Инженерно-гидрографические работы;</li>
-                    <li>Геодезические стационарные наблюдения за деформациями оснований зданий и сооружений, земной поверхности и толщи горных пород в районах развития опасных природных и техноприродных процессов;</li>
-                    <li>Геодезические работы при монтаже оборудования, выверке подкрановых путей и проверке вертикальности колонн, сооружений и их элементов;</li>
-                    <li>Исполнительные геодезические съемки планового и высотного положения элементов конструкций и частей зданий (сооружений) и инженерных коммуникаций;</li>
-                    <li>Съемка существующих железных и автомобильных дорог, составление продольных и поперечных профилей, пересечений линий электропередачи (ЛЭП), линий связи (ЛС), объектов радиосвязи, радиорелейных линий и магистральных трубопроводов.</li>
-                </ul>
+                <h3>Аэрофотосъемочные работы:</h3>
+                <p>
+                    "Красноярским АГП" с помощью БПЛА были отсняты порядка 90% всех районных центров Красноярского края.
+                </p>
+                <p>
+                    Проводились работы по аэрофотосъемке в республике Тыва, Ханты-Мансийском и Ямало-Ненецком автономных округах.
+                </p>
+                <p>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>2023</th>
+                                <th>2024</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>ОБЩАЯ ПЛОЩАДЬ АФС-РАБОТ, км<sup>2</sup></td>
+                                <td>210</td>
+                                <td>360</td>
+                            </tr>
+                            <tr>
+                                <td>из них с помощью БПЛА, км<sup>2</sup></td>
+                                <td>150</td>
+                                <td>360</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </p>
+                <p>
+                    Выполняемые работы:
+                    <ul>
+                        <li>Аэрофотосъемочные работы масштаб 1:2 000</li>
+                        <li>Планово-высотная подготовка снимков масштаб 1:2 000</li>
+                        <li>Создание цифровых ортофотопланов масштаб 1:2 000</li>
+                    </ul>
+                </p>
+                <p>
+                    В 2024г, для работ по созданию ЦОФП  масштаба 1:2000 для включения в состав единой электронной картографической основы для территории Красноярского края, Филиалом ППК «Роскадастр» «Красноярское АГП» были отсняты порядка 240 населенных пунктов Красноярского края.
+                </p>
+                <h3>Другие виды геодезических работ</h3>
+                <p>
+                    <ul>
+                        <li>
+                            Предприятием выполняются все виды инженерно-геодезических изысканий для проектирования, строительства и реконструкции;
+                        </li>
+                        <li>
+                            Развитие опорных и съемочных геодезических сетей;
+                        </li>
+                        <li>Топографическая съемка в масштабах 1:10000 – 1:200, включая съемку надземных и подземных сооружений в графической и цифровой формах;</li>
+                        <li>Камеральное и полевое трассирование линейных сооружений,Инженерно-гидрографические работы;</li>
+                        <li>Геодезические стационарные наблюдения за деформациями оснований зданий и сооружений, земной поверхности и толщи горных пород в районах развития опасных природных и техноприродных процессов;</li>
+                        <li>Геодезические работы при монтаже оборудования, выверке подкрановых путей и проверке вертикальности колонн, сооружений и их элементов;</li>
+                        <li>Исполнительные геодезические съемки планового и высотного положения элементов конструкций и частей зданий (сооружений) и инженерных коммуникаций;</li>
+                        <li>Съемка существующих железных и автомобильных дорог, составление продольных и поперечных профилей, пересечений линий электропередачи (ЛЭП), линий связи (ЛС), объектов радиосвязи, радиорелейных линий и магистральных трубопроводов.</li>
+                    </ul>
+                </p>
                 <p>Для производства топографических и специальных съемок используются электронные тахеометры SET фирмы Sokkia (Япония), в том числе безотражательные и низкотемпературные модели.</p>
                 <p>Использование трассоискателя FM 9800, производства фирмы Seba Dynatronic, (Германия) позволяет выполнять съемку подземных сооружений в самых сложных условиях, включая строительные площадки и промышленные объекты.</p>
                 <p>Развитие опорных геодезических сетей и планово-высотных геодезических сетей для стационарного наблюдения за деформациями зданий и сооружений, земной поверхности и толщи горных пород производится как традиционными методами с применением классических приборов: теодолитов, дальномеров, нивелиров, так и методами GPS с применением геодезических одночастотных приемников Stratus фирмы Sokkia и двухчастотных TTS 5700 фирмы Trimble.</p>
@@ -161,11 +203,11 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>-->
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
