--- a/service/landmanage.html
+++ b/service/landmanage.html
@@ -27,7 +27,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Установите базовый URL для всех относительных URL в документе -->
-    <!--<!--<base href="https://kagp-24.ru/">-->-->
+    <!--<!--<base href="https://kagp-24.ru/">-->
     <!-- Краткое описание документа (ограничение до 150 символов) -->
     <!-- Это содержимое может использоваться в результатах поисковых систем. -->
     <meta name="description" content="Описание страницы">
@@ -67,10 +67,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                <span class="d-sm-none d-inline">КАГП</span>
-                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
+            <a href="/" class="logo d-flex align-items-center">
+                <h1 class="sitename">Филиал ППК "Роскадастр"<br />"Красноярское АГП"</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -124,6 +122,40 @@
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Установление границ и площади объектов землеустройства(картометрическим, аналитическим, геодезическим способами); Формирование и проведение необходимых согласований Карт(планов) и Землеустроительных дел на объекты землеустройства и другие виды работ.</p>
+                <div class="row">
+                    <div class="col d-flex flex-column flex-md-row justify-content-around align-items-center m-3">
+                        <img src="/assets/img/zem1.jpg" class="p-1" />
+                        <img src="/assets/img/zem2.jpg" class="p-1" />
+                        <img src="/assets/img/zem3.jpg" class="p-1" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h2>Кадастровые работы:</h2>
+                        <ul>
+                            <li>Подготовка, согласование и утверждение схем расположения земельных участков на кадастровых планах территории;</li>
+                            <li>Подготовка проектов межевания территории;</li>
+                            <li>Подготовка Актов согласования границ земельных участков, проведение процедуры согласования границ;</li>
+                            <li>Подготовка заключения кадастрового инженера;</li>
+                            <li>Изготовление Межевых планов по образованию, уточнению, объединению, разделу, выделу в счет доли, перераспределению земельных участков и образованию частей земельных участков;</li>
+                            <li>Исправление кадастровой ошибки в сведениях государственного кадастра недвижимости;</li>
+                            <li>Подготовка Технических планов для постановки на кадастровый учет зданий, строений, сооружений, объектов незавершенного строительства;</li>
+                            <li>Сопровождение документации при государственном кадастровом учете;</li>
+                            <li>Восстановление и вынос границ земельных участков в натуру.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h2>Землеустроительные работы:</h2>
+                            <ul>
+                                <li>Установление границ и площади объектов землеустройства (картометрическим, аналитическим, геодезическим способами);</li>
+                                <li>Формирование и проведение необходимых согласований Карт(планов) и Землеустроительных дел на объекты землеустройства;</li>
+                                <li>Описание границ муниципальных образований (текстовое и картографическое), внесение сведений о таких границах в государственный кадастр недвижимости;</li>
+                                <li>Внесение сведений о границах охранных зон и зон с особыми условиями использования территории в государственный кадастр недвижимости.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -143,11 +175,11 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>-->
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
