--- a/service/maps.html
+++ b/service/maps.html
@@ -67,10 +67,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                <span class="d-sm-none d-inline">КАГП</span>
-                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
+            <a href="/" class="logo d-flex align-items-center">
+                <h1 class="sitename">Филиал ППК "Роскадастр"<br />"Красноярское АГП"</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -125,6 +123,25 @@
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <h3>Картографические работы</h3>
                 <p>Создание и обновление государственных топографических карт и планов; Создание и обновление цифровых и электронных карт; Ведение банка данных цифровой информации; Создание цифровых топографических карт открытого пользования и другие виды работ.</p>
+                <p>
+                    Камеральный цех предприятия выполняет работы:
+                    <ul>
+                        <li>по созданию и обновлению государственных топографических карт и планов;</li>
+                        <li>создание и обновление цифровых и электронных карт, ведение банка данных цифровой информации;</li>
+                        <li>создание цифровых топографических карт открытого пользования;</li>
+                        <li>обработка данных для создания карт из различных систем;</li>
+                        <li>оформление и подготовка карт к печати;</li>
+                        <li>перевод планов и схем с бумажных носителей в электронный вид;</li>
+                        <li>Создание и оформление навигационных карт с разной детализацией.</li>
+                    </ul>
+                </p>
+                <h3>Проводит работы по созданию тематических, специальных карт и планов.</h3>
+                <p>
+                    Заказчиками Красноярского аэрогеодезического предприятия являются ЗАО «Ванкорнефть», ООО «Газпром геологоразведка» - результатом работы, с которыми являются актуальные геоинформационные основы цифровых моделей местности разных масштабов, в различных программных продуктах.
+                </p>
+                <p>
+                    По заказу администрации города Красноярск и администраций районов города изготавливались планы, карт-схемы города и районов города. Выполняются работы по созданию тематических карт по районам края с возможной информацией заказчика, тематические карты по заказникам, заповедникам края, карты автомобильных дорог края.
+                </p>
             </div>
         </section>
     </main>
