--- a/services.html
+++ b/services.html
@@ -67,10 +67,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                <span class="d-sm-none d-inline">КАГП</span>
-                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
+            <a href="/" class="logo d-flex align-items-center">
+                <h1 class="sitename">Филиал ППК "Роскадастр"<br />"Красноярское АГП"</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -123,7 +121,107 @@
         <!-- Portfolio Details Section -->
         <section id="portfolio-details" class="portfolio-details section">
 
-            <div class="container" data-aos="fade-up" data-aos-delay="100">
+            <!-- Faq Section -->
+            <section id="faq" class="faq section">
+
+                <!-- Section Title -->
+                <div class="container section-title" data-aos="fade-up">
+                    <span class="description-title">УСЛУГИ</span>
+                    <h2>УСЛУГИ</h2>
+                    <p>Оказываем следующие виды услуг и работ</p>
+                </div><!-- End Section Title -->
+
+                <div class="container">
+
+                    <div class="row justify-content-center">
+
+                        <div class="col-lg-8">
+
+                            <div class="faq-container">
+
+                                <div class="faq-item faq-active" data-aos="fade-up" data-aos-delay="200">
+                                    <i class="faq-icon bi bi-award"></i>
+                                    <h3>Геодезические работы</h3>
+                                    <div class="faq-content">
+                                        <p>
+                                            <a href="/service/geodesy.html" class="link-light">
+                                                Аэрофотосъемочные работы; Создание спутниковых  геодезических сетей, создание и реконструкция высокоточных геодезических сетей(ВГС); Создание локальных базисных сетей высокой точности для решения инженерных задач и другие виды работ.
+                                            </a>
+                                        </p>
+                                    </div>
+                                    <i class="faq-toggle bi bi-chevron-right"></i>
+                                </div><!-- End Faq item-->
+
+                                <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
+                                    <i class="faq-icon bi bi-award"></i>
+                                    <h3>Картографические работы</h3>
+                                    <div class="faq-content">
+                                        <p>
+                                            <a href="/service/maps.html" class="link-light">
+                                                Создание и обновление государственных топографических карт и планов; Создание и обновление цифровых и электронных карт; Ведение банка данных цифровой информации; Создание цифровых топографических карт открытого пользования и другие виды работ.
+                                            </a>
+                                        </p>
+                                    </div>
+                                    <i class="faq-toggle bi bi-chevron-right"></i>
+                                </div><!-- End Faq item-->
+
+                                <div class="faq-item" data-aos="fade-up" data-aos-delay="400">
+                                    <i class="faq-icon bi bi-award"></i>
+                                    <h3>Комплекс инженерных изысканий для линейных и площадных объектов</h3>
+                                    <div class="faq-content">
+                                        <p>
+                                            <a href="/service/geodesy.html" class="link-light">
+                                                Инженерно-геологические; Гидрометеорологические; Экологические; Гидрологические изыскания.
+                                            </a>
+                                        </p>
+                                    </div>
+                                    <i class="faq-toggle bi bi-chevron-right"></i>
+                                </div><!-- End Faq item-->
+
+                                <div class="faq-item" data-aos="fade-up" data-aos-delay="500">
+                                    <i class="faq-icon bi bi-award"></i>
+                                    <h3>Кадастровые работы</h3>
+                                    <div class="faq-content">
+                                        <p>
+                                            <a href="/service/cadastre.html" class="link-light">
+                                                Подготовка, согласование и утверждение схем расположения земельных участков на кадастровых планах территории; Подготовка проектов межевания территории; Подготовка Актов согласования границ земельных участков, проведение процедуры согласования границ и другие виды работ.
+                                            </a>
+                                        </p>
+                                    </div>
+                                    <i class="faq-toggle bi bi-chevron-right"></i>
+                                </div><!-- End Faq item-->
+
+                                <div class="faq-item" data-aos="fade-up" data-aos-delay="600">
+                                    <i class="faq-icon bi bi-award"></i>
+                                    <h3>Лабораторные работы</h3>
+                                    <div class="faq-content">
+                                        <p>
+                                            <a href="/service/laboratory.html" class="link-light">
+                                                Исследование различных видов грунтов; Коэффициента выветрелости и истираемости; Исследование химического состава природных вод и водной вытяжки и другое.
+                                            </a>
+                                        </p>
+                                    </div>
+                                    <i class="faq-toggle bi bi-chevron-right"></i>
+                                </div><!-- End Faq item-->
+
+                                <div class="faq-item" data-aos="fade-up" data-aos-delay="700">
+                                    <i class="faq-icon bi bi-award"></i>
+                                    <h3>Землеустроительные работы</h3>
+                                    <div class="faq-content">
+                                        <p>
+                                            <a href="/service/landmanage.html" class="link-light">
+                                                Установление границ и площади объектов землеустройства(картометрическим, аналитическим, геодезическим способами); Формирование и проведение необходимых согласований Карт(планов) и Землеустроительных дел на объекты землеустройства и другие виды работ.
+                                            </a>
+                                        </p>
+                                    </div>
+                                    <i class="faq-toggle bi bi-chevron-right"></i>
+                                </div><!-- End Faq item-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section><!-- /Faq Section -->
+            <!--<div class="container" data-aos="fade-up" data-aos-delay="100">
                 <ul>
                     <li><a href="/service/geodesy.html">Геодезические изыскания</a></li>
                     <li><a href="/service/geology.html">Геологические изыскания</a></li>
@@ -132,7 +230,7 @@
                     <li><a href="/service/cadastre.html">Кадастровые работы</a></li>
                     <li><a href="/service/landmanage.html">Землеустроительные работы</a></li>
                 </ul>
-            </div>
+            </div>-->
         </section><!-- /Portfolio Details Section -->
     </main>
 
