--- a/service/geology.html
+++ b/service/geology.html
@@ -67,10 +67,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                <span class="d-sm-none d-inline">КАГП</span>
-                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
+            <a href="/" class="logo d-flex align-items-center">
+                <h1 class="sitename">Филиал ППК "Роскадастр"<br />"Красноярское АГП"</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -232,11 +230,11 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>-->
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
