--- a/service/laboratory.html
+++ b/service/laboratory.html
@@ -67,10 +67,8 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/img/gerb_geo.png" alt="" width="70" height="74" class="d-inline-block align-middle me-1">
-                <span class="d-sm-none d-inline">КАГП</span>
-                <span class="d-sm-inline d-none">КРАСНОЯРСКОЕ АЭРОГЕОДЕЗИЧЕСКОЕ ПРЕДПРИЯТИЕ</span>
+            <a href="/" class="logo d-flex align-items-center">
+                <h1 class="sitename">Филиал ППК "Роскадастр"<br />"Красноярское АГП"</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
@@ -125,6 +123,18 @@
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Исследование различных видов грунтов; Коэффициента выветрелости и истираемости; Исследование химического состава природных вод и водной вытяжки и другое.</p>
             </div>
+            <div>
+                <ul>
+                    <li>исследование дисперсных грунтов, с определением прочностных и деформационныххарактеристик (компрессионные, сдвиговые испытания и испытания на приборетрехосного сжатия);</li>
+                    <li>исследование скальных грунтов с определением предела прочности на одноосное сжатие и одноосное растяжение;</li>
+                    <li>исследование мерзлых грунтов с испытаниями методом шарикового штампа, сдвигапоповерхности смерзания, прочность и деформируемость ММГ методом одноосного сжатия;</li>
+                    <li>исследование крупнообломочных грунтов, с определением физических свойств,</li>
+                    <li>коэффициента выветрелости и истираемости;</li>
+                    <li>исследование физических свойств торфа;</li>
+                    <li>исследование строительных материалов, таких как щебень, песок, ПГС и др.;</li>
+                    <li>исследование химического состава природных вод и водной вытяжки.</li>
+                </ul>
+            </div>
         </section>
     </main>
 
@@ -143,11 +153,11 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>-->
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
